# docker-flask-sqlite-gunicorn-config

./: .env.dev  .env.prod  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
